# Tasks

./: .gitignore  CMakeLists.txt  Project-Technical-Overview.md  README.md
includes/Tasks/: Concurrency.hpp  Context.hpp  Dependency.hpp  Importance.hpp  Manager.hpp  Operation.hpp  Priority.hpp  PriorityUpdater.hpp  SyncManager.hpp  Task.hpp  TaskCycle.hpp  TaskData.hpp  TaskID.hpp  TaskName.hpp  TaskQueue.hpp  TaskRef.hpp  TaskRegistry.hpp  TaskScheduler.hpp  ThreadPool.hpp  TimeConstraint.hpp  common.hpp  pch.hpp
src/: Concurrency.cpp  Context.cpp  Dependency.cpp  Importace.cpp  Importance.cpp  Manager.cpp  Operation.cpp  Priority.cpp  PriorityUpdater.cpp  SyncManager.cpp  Task.cpp  TaskCycle.cpp  TaskData.cpp  TaskQueue.cpp  TaskRef.cpp  TaskRegistry.cpp  TaskScheduler.cpp  ThreadPool.cpp  TimeConstraint.cpp
tests/: CMakeLists.txt
tests/Testbed/: CMakeLists.txt  Testbed.cpp
tests/UnitTests/: CMakeLists.txt  Concurrency.cpp  Dependency.cpp  Importance.cpp  Operation.cpp
